2001-04-12  Gabriel Dos Reis  <gdr@codesourcery.com>

	* testsuite/README: Add DejaGnu specific documentation.

2001-04-11  Benjamin Kosnik  <bkoz@redhat.com>
	
	* acinclude.m4: AC_CHECK_TOOL for expect.
	* aclocal.m4: Regenerate.
	* configure: Regenerate.
	* testsuite/Makefile.am (RUNTEST): Use substituted.
	(EXPECT): Same.

	* configure.in: Remove xcompiling substitution.
	* tests_flags.in (CROSS_LIB_PATH): Remove.
	(xcompiling): Remove.
	(CXX): Use substituted CXX.
	
2001-04-11  Richard Henderson  <rth@redhat.com>

	* testsuite/lib/libstdc++.exp: Specify path for output_file.

2001-04-08  Gabriel Dos Reis  <gdr@codesourcery.com>

	* include/bits/std_valarray.h(valarray<>::operator[]): Make
	inline. 

2001-04-06  Gabriel Dos Reis  <gdr@codesourcery.com>
  
	* testsuite/25_algorithms/equal.cc: New test.

2001-04-06  Joe Buck  <jbuck@welsh-buck.org>

        * stl_algobase.h (std::equal): avoid use of possibly-undefined
        operator != (one line patch).

2001-04-06   Benjamin Kosnik  <bkoz@redhat.com>

	* include/backward/backward_warning.h: Re-enable.

2001-04-06  Benjamin Kosnik  <bkoz@redhat.com>
            Alexandre Oliva  <aoliva@redhat.com>
	
	* tests_flags.in (CROSS_LIB_PATH): Add as -B flag.

2001-04-06  Gabriel Dos Reis  <gdr@codesourcery.com>

        * include/c_std/bits/std_cmath.h: Get rid of C99 math macros.
        * testsuite/26_numerics/c99_macros.cc: Add test.

2001-04-06  Phil Edwards  <pme@sources.redhat.com>

	* docs/html/faq/index.html:  Update for 2.92, grab from RELEASE-NOTES.
	* docs/html/faq/index.txt:  Regenerated.

2001-04-06  Benjamin Kosnik  <bkoz@redhat.com>

	* include/backward/backward_warning.h: Temporarily disable until
	g++ testsuite changes go in.
	* tests_flags.in (CROSS_LIB_PATH): Add.

2001-04-05  Benjamin Kosnik  <bkoz@redhat.com>

	Warn when using backward headers.
	* include/backward/algo.h: Include warning file.	
	* include/backward/vector.h: Same.
	* include/backward/tree.h: Same.